--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import Intro from "~/components/intro.astro";
 import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
+import '../styles/global.css';
+import '../styles/theme.css';
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
