--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
 import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
-import "~/styles/index.css";
 import '../styles/global.css';
+import '../styles/index.css';
 import '../styles/theme.css';
 
 const { generator, site } = Astro;
